--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,12 @@ edition = "2021"
 [dependencies]
 actix="0.13.0"
 actix-web="4.3.1"
-diesel={version="2.1.0", features=["postgres"]}
+diesel={version="2.1.0", features=["postgres", "r2d2"]}
 dotenv="0.15.0"
 serde="1.0.9"
 serde_derive="1.0.9"
 serde_json="1.0.9"
+jsonwebtoken="8.3.0"
+bcrypt="0.14.0"
+chrono= "0.4.24"
+csrf="0.4.1"
