--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,23 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
 actix="0.13.0"
 actix-web="4.3.1"
 diesel={version="2.1.0", features=["postgres", "r2d2", "chrono"]}
 dotenv="0.15.0"
 serde="1.0.9"
+futures = "0.3.28"
 serde_derive="1.0.9"
 serde_json="1.0.9"
 dotenv_codegen = "0.15.0"
 jsonwebtoken="8.3.0"
 bcrypt="0.14.0"
-csrf-token = { git = "ssh://git@github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }
+csrf="0.4.1"
+data-encoding = "2.4.0"
 chrono= {version="0.4.21", features=["serde"]}
-
+log="0.4.6"
+actix-cors = "0.6.0"
 env_logger = "0.10.0"
-actix-identity = "0.5.2"
+actix-identity = "0.4.0"
 hex = "0.4.3"
