--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,14 @@ name = "mystore"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name="mystore_lib"
+path="src/lib.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+actix-http = "3.3.1"
 actix="0.13.0"
 actix-web="4.3.1"
 diesel={version="2.1.0", features=["postgres", "r2d2", "chrono"]}
@@ -26,3 +30,7 @@ actix-cors = "0.6.0"
 env_logger = "0.10.0"
 actix-identity = "0.4.0"
 hex = "0.4.3"
+
+[dev-dependencies]
+actix-http-test = "3.1.0"
+bytes="0.6.0"
